<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="com.admin.claire.garbag_truck.drawerlayout.AboutActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_background"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="3dp"
            android:padding="3dp"
            app:srcCompat="@drawable/transport"
            android:contentDescription="@string/about"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:textSize="18sp"
                android:textColor="#000000"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/textVersion"
                android:textSize="18sp"
                android:textColor="#1169ac"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/version" />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/card_background"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="3dp"
            android:padding="3dp"
            app:srcCompat="@drawable/transport"
            android:contentDescription="@string/about"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:textColor="#000000"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taipei2" />

            <TextView
                android:id="@+id/textTaipei"
                android:textSize="16sp"
                android:textColor="#0b0b0b"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datataipei" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:background="@drawable/card_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:layout_margin="3dp"
            app:srcCompat="@drawable/recycle"
            android:contentDescription="@string/about"/>

        <TextView
            android:id="@+id/textRecycle"
            android:textSize="18sp"
            android:textColor="#d71074"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recycle" />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="8dp"
        android:background="@drawable/card_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="11dp"
            android:layout_margin="3dp"
            app:srcCompat="@drawable/yahoo"
            android:contentDescription="@string/about" />

        <TextView
            android:id="@+id/textYahoo"
            android:textSize="18sp"
            android:textColor="#d71074"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yahoo" />

    </LinearLayout>

</LinearLayout>
