<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/background"
    tools:context="com.admin.claire.garbag_truck.NotesActivity">


    <LinearLayout
    android:id="@+id/layout_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_title"
        android:background="@drawable/card_background"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"/>

        <EditText
            android:id="@+id/edit_Content"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/card_background"
            android:gravity="top"
            android:layout_marginTop="16sp"
            android:hint="@string/content"
            android:inputType="textMultiLine"
            android:padding="10dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:layout_below="@+id/layout_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/imageAlarm"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_margin="8dp"
            android:background="@drawable/circle_button"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_alarm_on_black_36dp" />

        <ImageView
            android:id="@+id/imageTakePhoto"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_margin="8dp"
            android:background="@drawable/circle_button"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_add_a_photo_black_36dp"/>

        <ImageView
            android:id="@+id/imageChoosePhoto"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_margin="8dp"
            android:background="@drawable/circle_button"
            app:srcCompat="@drawable/ic_photo_black_36dp"
            android:contentDescription="@string/app_name"/>

        <ImageView
            android:id="@+id/imageSelectColor"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_margin="8dp"
            android:background="@drawable/circle_button"
            app:srcCompat="@drawable/ic_bookmark_black_36dp"
            android:contentDescription="@string/app_name"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_btn"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_Ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_ok"
            android:background="#2b8ade"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:background="#2b8ade"
            android:textColor="#ffffff"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>


</RelativeLayout>
